syntax = "proto3";

package user;

service UserService {
    rpc GetUser (GetUserRequest) returns (GetUserResponse);
    rpc CreateUser (CreateUserRequest) returns (CreateUserResponse);
    rpc DeleteUser (DeleteUserRequest) returns (DeleteUserResponse);
}

message GetUserRequest {
    int32 user_id = 1;
}

message GetUserResponse {
    string name = 1;
}

message CreateUserRequest {
    string name = 1;
}

message CreateUserResponse {
    int32 user_id = 1;
}

message DeleteUserRequest {
    int32 user_id = 1;
}

message DeleteUserResponse {
    string message = 1;
}